[db] Fixed some contrast ratio

--- a/code/style.css
+++ b/code/style.css
@@ -74,6 +74,7 @@
   height: 500px;
   position: relative;
   z-index: -1;
+  filter: brightness(75%);
 }
 
 .social-links-header {
@@ -258,6 +259,7 @@
   line-height: 29px;
     
   color: #FA382F;
+  background-color: #F4F4F4;
 }
 
 /* --------------OTHER PROJECTS SECTION-------------- */
@@ -296,6 +298,7 @@
   line-height: 29px;
     
   color: #FA382F;
+  background-color: #F4F4F4;
 }
 
 /* --------------MY THOUGHTS-------------- */
@@ -340,6 +343,7 @@
   line-height: 35px;
     
   color: hsl(0, 95%, 50%);
+  background-color: #FFFFFF;
 }
 
 .my-thougts-article-title {  
@@ -419,6 +423,15 @@
   color: #000000;
 }
 
+.skills-paragraph-style h4 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;  
+
+  color: #FA382F;
+  background-color: #F4F4F4;
+}
+
 /* --------------FOR MORE-------------- */
 
 .for-more-wrapper {
@@ -480,6 +493,7 @@
   color: #FA382F;
   font-weight: 800;
   font-size: 17px;
+  background-color: #FFFFFF;
 }
 
 .bold {
@@ -507,7 +521,7 @@
   display: flex;  
 }
 
-.tag-wrapper p {
+.tag-wrapper h5 {
   font-family: "Roboto", sans-serif;
   color: #2b2e34;
   font-weight: bold;
@@ -533,7 +547,7 @@
   display: flex;
 }
 
-.tag-wrapper-deployment p {
+.tag-wrapper-deployment h5 {
   font-family: "Roboto", sans-serif;
   color: #2b2e34;
   font-weight: bold;
@@ -696,14 +710,14 @@ a:active {
 
   /* --------------TAGS-------------- */
 
-  .tag-wrapper p {        
+  .tag-wrapper h5 {        
     font-size: 14px; 
     line-height: 14px;  
     padding: 6px;  
     margin: 10px 8px 3px 0;   
   }
 
-    .tag-wrapper-deployment p {
+    .tag-wrapper-deployment h5 {
     font-size: 14px; 
     line-height: 14px;    
     padding: 6px;    
@@ -867,7 +881,11 @@ a:active {
 
   .skills-paragraph-style {    
     font-size: 18px;    
-  }  
+  }
+
+  .skills-paragraph-style h4 {    
+    font-size: 20px;    
+  }
 
   /* --------------FOR MORE-------------- */
 
@@ -890,7 +908,7 @@ a:active {
 
   /* --------------TAGS-------------- */
 
-  .tag-wrapper p {     
+  .tag-wrapper h5 {     
     /* Matching line-height and font-size here gives full control 
        over the size of our tags to the padding*/
     font-size: 18px; 
@@ -902,7 +920,7 @@ a:active {
     /* Control the spacing of our tags */
     margin: 12px 8px 3px 0;   
   }
-    .tag-wrapper-deployment p {
+    .tag-wrapper-deployment h5 {
     font-size: 18px; 
     line-height: 18px;    
     padding: 6px;    
